--- a/src/global.css
+++ b/src/global.css
@@ -13,7 +13,8 @@ body {
 }
 
 h1 {
-	padding: 1em 0 0.5em;
+	padding: 0.15em 0 0.15em;
+	margin: 0 0;
 	text-transform: none;
 	font-size: 3.2em;
 	font-weight: 100;
@@ -25,7 +26,7 @@ h1, h2, h3, h4 {
 }
 
 h2 {
-	padding: 0.1em;
+	padding: 0.1em 0 0.1em;
 	margin: 0 0;
 	font-size: 2.8em;
 	font-weight: 50;
@@ -34,7 +35,7 @@ h2 {
 h3 {
 	padding: 0.1em;
 	margin: 0 0;
-	font-size: 1.5em;
+	font-size: 2.2em;
 	font-weight: 50;
 }
 h4 {
